--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
+    "css-mqpacker": "^6.0.1",
+    "cssnano": "^3.10.0",
     "cssnext": "^1.8.4",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
+    "normalize.css": "^7.0.0",
+    "pixrem": "^3.0.2",
+    "postcss-color-rgba-fallback": "^2.2.0",
+    "postcss-import": "^10.0.0",
+    "postcss-opacity": "^4.0.0",
+    "postcss-pseudoelements": "^4.0.0",
+    "postcss-vmin": "^3.0.0",
+    "postcss-will-change": "^2.0.0",
     "precss": "^2.0.0"
   }
 }
