--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"lite-server"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +16,13 @@
     "cssnext": "^1.8.4",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.0",
+    "lite-server": "^2.3.0",
     "normalize.css": "^7.0.0",
     "pixrem": "^3.0.2",
+    "postcss-alias": "^1.0.0",
     "postcss-color-rgba-fallback": "^2.2.0",
+    "postcss-crip": "^2.0.1",
+    "postcss-font-magician": "^2.0.0",
     "postcss-import": "^10.0.0",
     "postcss-opacity": "^4.0.0",
     "postcss-pseudoelements": "^4.0.0",
